--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "8.2.4"
-  }
+    "inquirer": "^8.2.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jakewmcmillan/readme-generator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/jakewmcmillan/readme-generator/issues"
+  },
+  "homepage": "https://github.com/jakewmcmillan/readme-generator#readme"
 }
